# Edge-Keyword-Spotting-YAMNet-TL-with-Full-MLOps

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci_dev.yaml  ci_main.yaml  docker.yml
configs/: train_model.yaml
scripts/: download_data.py  evaluate_model.py  export_model.py  infer_wav.py  train_model.py
src/kws/models/: cnn.py
src/kws/serve/: app.py
src/kws/training/: train.py
tests/: test_data.py  test_model.py  test_train_smoke.py
